WIP
-----------------------------
* Gear Widget
  - Add "show_inverted_battery" & "show_inverted_rpm" options that invert battery or rpm bar progression.

2.20.1 (2024-11-24)
-----------------------------
* Pace Notes Playback
  - Default "playback" option is now set on "disabled" for new presets.
    User may click "Disabled Playback" button from "Pace Notes" tab to enable playback.
  - Adjusting playback volume now takes immediate effect.

* Pace notes Widget, Track notes Widget
  - Add "enable_comments_line_break" option (requested by DanRZ) for enabling multi-line comments display.
    Note, a note comment can be broken into multiple lines by adding "\n" to any part of
    the comment in Track Notes Editor.
  - Add "maximum_display_duration" option (requested by DanRZ), which sets maximum display duration (seconds)
    of each note. Set to "-1" to always display notes. Default is "-1".

* Notes Module
  - "Global offset" option from "Pace Notes" tab no longer affects "track notes".
  - Fixed position desync issue that would occasionally trigger previous note again.

2.20.0 (2024-11-17)
-----------------------------
* General
  - [New]Implemented track & pace notes system, which allows load & save track & pace notes files.
  - Add "pace_notes_path" & "track_notes_path" options to global user config file.
  - Add new ".TPPN" (TinyPedal Pace Notes) & ".TPTN" (TinyPedal Track Notes) file formats.
  - Add support for load & save GPL pace notes ".ini" file format.
    Special thanks to "Lee Bowden" (author of GPL pace notes system & file format) and "Jim Pearson"
    for providing technical assistance.
  - Add "multimedia_plugin_on_windows" option in Compatibility dialog, which sets multimedia plugin
    for playing sound file on windows.

* [New]Pace Notes Playback Tab
  - Add "Pace Notes Playback" control panel that can be accessed from "Pace Notes" tab in main window.
    This control panel provides pace notes sound playback control and configuration.